--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="netflix-row">
           <div class="left d-flex align-items-center">
             <a class="navbar-brand" href="#">
-              <img src="./images/logo.png" alt="">
+              <img src="logo.png" alt="">
             </a>
             <div  class="netflix-nav">
                <section>
