--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
          <section class="netflix-home-video">
             <div class="top"></div>
             <div class="bottom"></div>
-            <video src="./video/video.mp4" autoplay muted loop></video>
+            <video src="video/video.mp4" autoplay muted loop></video>
             <div class="content">
                 <section class="left">
                     <img src="image2.webp" alt="">
